- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10943                                -
---------------------------------------------
- 2021-07-18                                -
---------------------------------------------
.: WSM: Task - Send an email to notify once order has been approved by merchant (CMS3-397)

---------------------------------------------
- 2021-07-14                                -
---------------------------------------------
.: WSM: Task - Search item by category (WSM-400)

---------------------------------------------
- 2021-07-14                                -
---------------------------------------------
.: WSM: Task - Showing pay-slip in invoice info (WSM-390)
.: WSM: Task - When create store, it is difficult to see the selected item (WSM-389)
.: WSM: Task - A customize name for on-selling item (WSM-412)

- v1.0.10942                                -
---------------------------------------------
- 2021-07-08                                -
---------------------------------------------
.: WSM: BugFix - Update sales analysis with subitems update (WSM-408)

---------------------------------------------
- 2021-07-07                                -
---------------------------------------------
.: WSM: Task - FAQ (WSM-391)

- v1.0.10941                                -
---------------------------------------------
- 2021-07-04                                -
---------------------------------------------
.: WSM: Task - Allow longer text in subitems (WSM-411)

---------------------------------------------
- 2021-07-02                                -
---------------------------------------------
.: WSM: Task - Able to add subitems in invoice (WSM-403)

---------------------------------------------
- 2021-07-01                                -
---------------------------------------------
.: WSM: Task - Disabled discount (WSM-394)

---------------------------------------------