@@ -16,7 +16,7 @@
             <div>
                 <button class="btn btn-sm btn-primary mr-2" (click)="copy($event)">Copy Link</button>
                 <button class="btn btn-sm btn-controller float-right" (click)="close()">Close</button>
-                <button *ngIf="item?.status == 'wait_for_approval'" class="btn btn-sm btn-controller float-right mr-2" [disabled]="statusLoading.isRunning()" (click)="approve()">
+                <button *ngIf="item?.status == 'wait_for_approval'" class="btn btn-sm btn-controller float-right mr-2" [disabled]="statusLoading.isRunning()" (click)="openApproveConfirmation()">
                     <ws-spinner class="mr-2" *ngIf="statusLoading.isRunning()" [width]="15" [height]="15" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>Approve</button>
                 <button *ngIf="item?.status == 'wait_for_approval'" class="btn btn-sm btn-danger" (click)="reject()">Reject</button>
             </div>
@@ -58,3 +58,6 @@
         <ws-spinner class="text-center d-block w-100" style="padding-top: 30vh; padding-bottom: 30vh" [borderWidth]="1" [spinnerColor]="'#b71c1c'"></ws-spinner>
     </ng-container>
 </ng-template>
+
+<confirm-modal *ngIf="isApproveEmptyDeliveryFeeModalOpened" [(isOpened)]="isApproveEmptyDeliveryFeeModalOpened" id="approvedEmptyDeliveryFeeModal" [loading]="statusLoading.isRunning()" [message]="'Is the order free delivery?'" [action]="approve.bind(this)" [closeCallback]="confirmationClose.bind(this)">
+</confirm-modal>
