@@ -8,7 +8,8 @@ import { Delivery } from '@objects/delivery';
 import { Invoice } from '@objects/invoice';
 import { AuthDeliveryContributorService } from '@services/http/auth-store/contributor/auth-delivery-contributor.service';
 import { AuthInvoiceContributorService } from '@services/http/auth-store/contributor/auth-invoice-contributor.service';
-import { Subject } from 'rxjs';
+import { merge } from 'jquery';
+import { concat, of, Subject } from 'rxjs';
 import { finalize, takeUntil } from 'rxjs/operators';
 
 @Component({
@@ -32,6 +33,7 @@ export class InvoiceInfoModalComponent extends WsModalComponent implements OnIni
   refundLoading: WsLoading = new WsLoading();
   isModifyInvoiceModalOpened: boolean;
   isRejectInvoiceModalOpened: boolean;
+  isApproveEmptyDeliveryFeeModalOpened: boolean;
   rejectReason: string = '';
   private ngUnsubscribe: Subject<any> = new Subject;
   constructor(private authInvoiceContributorService: AuthInvoiceContributorService,
@@ -43,12 +45,24 @@ export class InvoiceInfoModalComponent extends WsModalComponent implements OnIni
     super.ngOnInit();
     this.getDeliveries();
   }
+  openApproveConfirmation() {
+    if (this.item?.delivery?.fee) {
+      this.approve();
+    } else {
+      this.isOpened = false;
+      this.isApproveEmptyDeliveryFeeModalOpened = true;
+    }
+  }
   approve() {
     this.statusLoading.start();
-    this.authInvoiceContributorService.updateInvoiceStatus(this.item._id, {fromStatus: 'wait_for_approval', status: 'new'}).pipe(takeUntil(this.ngUnsubscribe), finalize(() => this.statusLoading.stop())).subscribe(result => {
+    concat(
+      this.authInvoiceContributorService.updateInvoiceDelivery(this.item),
+      this.authInvoiceContributorService.updateInvoiceStatus(this.item._id, {fromStatus: 'wait_for_approval', status: 'new'})
+    ).pipe(takeUntil(this.ngUnsubscribe), finalize(() => this.statusLoading.stop())).subscribe(result => {
       this.item.status = 'new';
       this.authInvoiceContributorService.refreshStatusWaitForApprovalToNew();
       this.authInvoiceContributorService.refreshDashboardInvoices(this.item);
+      this.isApproveEmptyDeliveryFeeModalOpened = false;
       this.close();
     }, err => {
       WsToastService.toastSubject.next({ content: 'Invoice couldn\'t be updated due to status is outdated.', type: 'danger'})
@@ -121,13 +135,13 @@ export class InvoiceInfoModalComponent extends WsModalComponent implements OnIni
     });
   }
   updateDelivery(event) {
-    this.authInvoiceContributorService.updateInvoiceDelivery(event).pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      if (this.item.status == 'wait_for_approval') {
-        WsToastService.toastSubject.next({content: 'Delivery is updated!<br/>Approval is required and wait for the payment!', type: 'success'});
-      } else {
-        WsToastService.toastSubject.next({content: 'Delivery is updated!', type: 'success'});
-      }
-    });
+    if (this.item.status == 'new') {
+      this.authInvoiceContributorService.updateInvoiceDelivery(event).pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
+          WsToastService.toastSubject.next({content: 'Delivery is updated!', type: 'success'});
+      });
+    } else if (this.item.status == 'wait_for_approval') {
+      this.item = event;
+    }
   }
   onPayslipClicked() {
     this.isOpened = false;
@@ -135,6 +149,9 @@ export class InvoiceInfoModalComponent extends WsModalComponent implements OnIni
   }
   ngOnDestroy() {
     super.ngOnDestroy();
+  }
+  confirmationClose() {
+    this.isOpened = true;
   }
   close() {
     super.close();
